Updated setup and examples

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -19,9 +19,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# You can download our demo dataset used in these examples from \n",
-    "# Dropbox (faster download) (https://www.dropbox.com/scl/fi/dszpkbrp44c0qpagr1wxl/LLSM5DTools_demo_cell_image_dataset.tar?rlkey=p4pll0l42xt6fekm47m8jzni7&dl=1)\n",
-    "# or Zenodo (https://zenodo.org/records/10471979/files/LLSM5DTools_demo_cell_image_dataset.tar?download=1)"
+    "# You can set the folder where our demo dataset will be downloaded to\n",
+    "# By default it will be the Downloads folder in your home directory\n",
+    "# I.E. Setting llsm5dtools_demo_dataset_install_dir = \"~/Downloads/\" will install\n",
+    "# the dataset to ~/Downloads/LLSM5DTools_demo_cell_image_dataset/\n",
+    "import os\n",
+    "import subprocess\n",
+    "import urllib.request\n",
+    "\n",
+    "# Change this variable to your desired download location\n",
+    "llsm5dtools_demo_dataset_install_dir = \"~/Downloads/\"\n",
+    "\n",
+    "llsm5dtools_demo_dataset_install_dir = os.path.expanduser(llsm5dtools_demo_dataset_install_dir)\n",
+    "llsm5dtools_demo_dataset_install_dir = os.path.join(llsm5dtools_demo_dataset_install_dir,'')\n",
+    "llsm5dtools_demo_dataset_url = \"https://www.dropbox.com/scl/fi/dszpkbrp44c0qpagr1wxl/LLSM5DTools_demo_cell_image_dataset.tar?rlkey=p4pll0l42xt6fekm47m8jzni7&dl=1\"\n",
+    "llsm5dtools_demo_dataset_dir_loc = os.path.join(llsm5dtools_demo_dataset_install_dir, \"LLSM5DTools_demo_cell_image_dataset/\")\n",
+    "llsm5dtools_demo_dataset_tar_loc = os.path.join(llsm5dtools_demo_dataset_install_dir, \"LLSM5DTools_demo_cell_image_dataset.tar\")\n",
+    "os.makedirs(os.path.dirname(llsm5dtools_demo_dataset_install_dir), exist_ok=True)\n",
+    "if not os.path.exists(llsm5dtools_demo_dataset_dir_loc):\n",
+    "    print(\"Downloading the demo dataset\")\n",
+    "    urllib.request.urlretrieve(llsm5dtools_demo_dataset_url, llsm5dtools_demo_dataset_tar_loc)\n",
+    "    print(\"Demo dataset downloaded successfully\")\n",
+    "    print(\"Untarring the demo dataset\")\n",
+    "    process = subprocess.Popen(\n",
+    "    f\"tar -xf \\\"{llsm5dtools_demo_dataset_tar_loc}\\\" -C \\\"{llsm5dtools_demo_dataset_install_dir}\\\"\", shell=True)\n",
+    "    process.wait()\n",
+    "    print(\"Demo dataset untarred successfully\")\n",
+    "    print(\"Removing the tar file\")\n",
+    "    os.remove(llsm5dtools_demo_dataset_tar_loc)\n",
+    "    print(\"Finished!\")\n",
+    "    print(f\"The demo dataset is located here: {llsm5dtools_demo_dataset_dir_loc}\")\n",
+    "else:\n",
+    "    print(f\"The demo dataset is already located here: {llsm5dtools_demo_dataset_dir_loc}\")\n"
    ]
   },
   {
@@ -35,7 +64,7 @@
     "from PyLLSM5DTools import XR_deskew_rotate_data_wrapper\n",
     "\n",
     "# Set your data path to our demo dataset\n",
-    "dataPath = '/badgermole/LLSM5DTools_demo_cell_image_dataset/'\n",
+    "dataPath = '~/Downloads/LLSM5DTools_demo_cell_image_dataset/'\n",
     "dataPath_exps = [dataPath]\n",
     "\n",
     "# run deskew if true\n",
@@ -115,7 +144,7 @@
     "from PyLLSM5DTools import XR_decon_data_wrapper\n",
     "\n",
     "# Set your data path to our demo dataset\n",
-    "dataPath = '/badgermole/LLSM5DTools_demo_cell_image_dataset/'\n",
+    "dataPath = '~/Downloads/LLSM5DTools_demo_cell_image_dataset/'\n",
     "dataPaths = [dataPath]\n",
     "rt = dataPath\n",
     "# xy pixel size in um\n",
@@ -210,7 +239,8 @@
     "# Example for running a skewed space stitch on our demo dataset\n",
     "from PyLLSM5DTools import XR_matlab_stitching_wrapper\n",
     "\n",
-    "dataPath = \"/badgermole/LLSM5DTools_demo_cell_image_dataset/\"\n",
+    "# Set your data path to our demo dataset\n",
+    "dataPath = \"~/Downloads/LLSM5DTools_demo_cell_image_dataset/\"\n",
     "dataPaths = [dataPath]\n",
     "\n",
     "# image list path: csv file\n",
@@ -263,7 +293,7 @@
     "Save16bit = True\n",
     "\n",
     "#########################################################################\n",
-    "# parameters below are used in special cases or for advanced fine tuning\n",
+    "# parameters below are used in special cases or for advanced fine-tuning\n",
     "\n",
     "# resample data, if empty, stitch in original resolution. If a 1X3 array,\n",
     "# resample data and then stitch, mostly used for initial inspection\n",
@@ -280,8 +310,8 @@
     "zMaxOffset = 150\n",
     "\n",
     "# downsampling factors for overlap regions to calculate xcorr in xcorr registration. \n",
-    "# with larger downsamplinf factors, the faster of the xcorr computing, yet\n",
-    "# lower accuracy will be. \n",
+    "# with larger downsamplinf factors, the faster the xcorr computing, but\n",
+    "# the lower accuracy will be. \n",
     "xcorrDownsample = [2, 2, 2]\n",
     "\n",
     "# crop input tile before any processing, empty (no crop) or a 1X6 array [ymin, xmin, zmin, ymax, xmax, zmax]\n",
@@ -338,8 +368,8 @@
     "# Example for running a crop on our demo dataset\n",
     "from PyLLSM5DTools import XR_crop_dataset\n",
     "\n",
-    "\n",
-    "dataPath = '/badgermole/LLSM5DTools_demo_cell_image_dataset/'\n",
+    "# Set your data path to our demo dataset\n",
+    "dataPath = '~/Downloads/LLSM5DTools_demo_cell_image_dataset/'\n",
     "XR_crop_dataset([dataPath], [f\"{dataPath}/crop\"], [1, 1, 1, 100, 100, 100])"
    ]
   }
