Added a config file generator example

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "# Install PyLLSM5DTools in your env\n",
     "# You can skip this step if you've already installed it in the env you are using for this notebook\n",
-    "%pip install PyLLSM5DTools"
+    "%pip install --no-binary :all: --no-cache-dir PyLLSM5DTools"
    ]
   },
   {
@@ -52,6 +52,17 @@
     "else:\n",
     "    print(f\"The demo dataset is already located here: {llsm5dtools_demo_dataset_dir_loc}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "# "
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "584bde4b7cbe81f9"
   },
   {
    "cell_type": "code",
