Added Markdown Titles to the notebooks

--- a/notebooks/examples.ipynb
+++ b/notebooks/examples.ipynb
@@ -1,17 +1,48 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# PyPetaKit5D Examples"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "4390024e9177d53"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Install PyPetaKit5D in your env"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "eb15422a79f39f5"
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6ff5259b-82b5-43cb-bba2-54dedeca9a59",
-   "metadata": {},
    "outputs": [],
    "source": [
-    "# Install PyPetaKit5D in your env\n",
     "# The installation may take a long time\n",
     "# You can skip this step if you've already installed it in the env you are using for this notebook\n",
     "%pip install --no-binary :all: --no-cache-dir PyPetaKit5D"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6ff5259b-82b5-43cb-bba2-54dedeca9a59",
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Download the Cell Image Dataset"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "d4a79dec66d112a2"
   },
   {
    "cell_type": "code",
@@ -55,13 +86,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Run a DSR on our demo dataset"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "3cc2b362d2454291"
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "45932b38-5fd3-459a-8fce-70bc70b59d7f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Example for running a DSR on our demo dataset\n",
     "from PyPetaKit5D import XR_deskew_rotate_data_wrapper\n",
     "\n",
     "# Set your data path to our demo dataset\n",
@@ -135,13 +175,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Run a deconvolution on our demo dataset"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "f99e1e72783eff50"
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c676ec13-78f6-48ad-b7da-8342e0aa5c64",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Example for running a deconvolution on our demo dataset\n",
     "from PyPetaKit5D import XR_decon_data_wrapper\n",
     "\n",
     "# Set your data path to our demo dataset\n",
@@ -229,13 +278,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Run a skewed space stitch on our demo dataset"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "d82691d7fbeaa815"
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c9d64d2f-e403-4c1e-9eb2-3970268fea2a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Example for running a skewed space stitch on our demo dataset\n",
     "from PyPetaKit5D import XR_matlab_stitching_wrapper\n",
     "\n",
     "# Set your data path to our demo dataset\n",
@@ -358,10 +416,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Run a resample on our demo dataset"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "9415210c6e489430"
+  },
+  {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "6a6275b73bf0f62d",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
-    "# Example for running a resample on our demo dataset\n",
     "from PyPetaKit5D import XR_resample_dataset\n",
     "\n",
     "# Set your data path to our demo dataset\n",
@@ -408,12 +480,17 @@
     "    batchSize=batchSize, borderSize=borderSize, parseCluster=parseCluster,\n",
     "    masterCompute=masterCompute, cpusPerTask=cpusPerTask, mccMode=mccMode,\n",
     "    configFile=configFile);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Run a crop on our demo dataset"
    ],
    "metadata": {
     "collapsed": false
    },
-   "id": "6a6275b73bf0f62d",
-   "execution_count": null
+   "id": "9ee6d8dcb968bd5b"
   },
   {
    "cell_type": "code",
@@ -422,7 +499,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Example for running a crop on our demo dataset\n",
     "from PyPetaKit5D import XR_crop_dataset\n",
     "\n",
     "# Set your data path to our demo dataset\n",
@@ -434,10 +510,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Create MIPs of our demo dataset"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "19550559b55f45da"
+  },
+  {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "1da23017de640863",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
-    "# Example for creating MIPs of our demo dataset\n",
     "from PyPetaKit5D import XR_MIP_wrapper\n",
     "\n",
     "# Set your data path to our demo dataset\n",
@@ -473,18 +563,27 @@
     "    zarrFile=zarrFile, largeZarr=largeZarr, batchSize=batchSize, save16bit=save16bit,\n",
     "    parseCluster=parseCluster, masterCompute=masterCompute, cpusPerTask=cpusPerTask,\n",
     "    mccMode=mccMode, configFile=configFile);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Run an FFT Analysis on our demo dataset"
    ],
    "metadata": {
     "collapsed": false
    },
-   "id": "1da23017de640863",
-   "execution_count": null
+   "id": "2b5a057c58da6b03"
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "1ae9109d3664d604",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
-    "# Example for running an FFT Analysis on our demo dataset\n",
     "# Note: We must first run a Decon and DS/DSR before the FFT Analysis\n",
     "from PyPetaKit5D import XR_decon_data_wrapper\n",
     "from PyPetaKit5D import XR_deskew_rotate_data_wrapper\n",
@@ -691,18 +790,27 @@
     "    outPixelSize=outPixelSize, save3DStack=save3DStack, parseCluster=parseCluster,\n",
     "    masterCompute=masterCompute, cpusPerTask=cpusPerTask, mccMode=mccMode,\n",
     "    configFile=configFile);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Run a PSF Analysis on our demo dataset"
    ],
    "metadata": {
     "collapsed": false
    },
-   "id": "1ae9109d3664d604",
-   "execution_count": null
+   "id": "91cef5776eff29d2"
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "942c93c24e398201",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
-    "# Example for running a PSF Analysis on our demo dataset\n",
     "# Note: This demo will not end until you close the final graph\n",
     "from PyPetaKit5D import XR_psf_analysis_wrapper\n",
     "\n",
@@ -746,18 +854,27 @@
     "    deskew=deskew, objectiveScan=objectiveScan, sourceStr=sourceStr,\n",
     "    RWFn=RWFn, parseCluster=parseCluster, masterCompute=masterCompute,\n",
     "    cpusPerTask=cpusPerTask, mccMode=mccMode, configFile=configFile);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Run an FSC Analysis on our demo dataset"
    ],
    "metadata": {
     "collapsed": false
    },
-   "id": "942c93c24e398201",
-   "execution_count": null
+   "id": "78316071bda52f3d"
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "22393ecec9d21aaa",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
-    "# Example for running an FSC Analysis on our demo dataset\n",
     "# Note: We must first run a Decon before the FSC Analysis\n",
     "from PyPetaKit5D import XR_decon_data_wrapper\n",
     "from PyPetaKit5D import XR_FSC_analysis_wrapper\n",
@@ -912,18 +1029,27 @@
     "    channelPatterns=channelPatterns, channels=channels, suffix=suffix,\n",
     "    iterInterval=iterInterval, parseCluster=parseCluster, masterCompute=masterCompute,\n",
     "    cpusPerTask=cpusPerTask, mccMode=mccMode, configFile=configFile)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Convert tiff files to zarr files and zarr files to tiff files using our demo dataset"
    ],
    "metadata": {
     "collapsed": false
    },
-   "id": "22393ecec9d21aaa",
-   "execution_count": null
+   "id": "9dd79536bebe80b6"
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "d2dfeb2fc622ed54",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
-    "# Example for converting tiff files to zarr files and zarr files to tiff files using our demo dataset\n",
     "from PyPetaKit5D import XR_tiffToZarr_wrapper\n",
     "from PyPetaKit5D import XR_zarrToTiff_wrapper\n",
     "\n",
@@ -983,18 +1109,27 @@
     "XR_zarrToTiff_wrapper(dataPaths, resultDirName=resultDirName, channelPatterns=channelPatterns,\n",
     "    parseCluster=parseCluster, masterCompute=masterCompute, cpusPerTask=cpusPerTask,\n",
     "    mccMode=mccMode, configFile=configFile)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Create an imaris file from our demo dataset"
    ],
    "metadata": {
     "collapsed": false
    },
-   "id": "d2dfeb2fc622ed54",
-   "execution_count": null
+   "id": "aad3ba57325c9227"
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "16409b8a4afb0d79",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
-    "# Example for creating an imaris file from our demo dataset\n",
     "from PyPetaKit5D import XR_imaris_conversion_data_wrapper\n",
     "\n",
     "# Set your data path to our demo dataset\n",
@@ -1026,12 +1161,7 @@
     "    pixelSizes=pixelSizes, zarrFile=zarrFile, blockSize=blockSize,\n",
     "    parseCluster=parseCluster, masterCompute=masterCompute, cpusPerTask=cpusPerTask,\n",
     "    mccMode=mccMode, configFile=configFile);"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "16409b8a4afb0d79",
-   "execution_count": null
+   ]
   }
  ],
  "metadata": {
@@ -1050,7 +1180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
