--- a/notebooks/examplesNonLightSheetModalities.ipynb
+++ b/notebooks/examplesNonLightSheetModalities.ipynb
@@ -1,17 +1,46 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# PyPetaKit5D Examples for Non-Light-Sheet Modalities"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a8fe3d4e8bf2db40"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Install PyPetaKit5D in your env"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "3f5490e2e2a650bb"
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "6ff5259b-82b5-43cb-bba2-54dedeca9a59",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Install PyPetaKit5D in your env\n",
     "# The installation may take a long time\n",
     "# You can skip this step if you've already installed it in the env you are using for this notebook\n",
     "%pip install --no-binary :all: --no-cache-dir PyPetaKit5D"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Download the 2P, Confocal, Phase, and Widefield Demo Datasets"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "491f4fc8d7b5da09"
   },
   {
    "cell_type": "code",
@@ -55,10 +84,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Generate an image list for Phase images from tile positions"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "3cd2d4ef9de746dd"
+  },
+  {
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "# Example for generating an image list for Phase images from tile positions\n",
     "from PyPetaKit5D import XR_generate_image_list_wrapper\n",
     "\n",
     "# We also include the image list csv file in\n",
@@ -113,10 +151,19 @@
    "execution_count": null
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Run stitching for the Phase data"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "47393c192366df38"
+  },
+  {
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "# Example for phase stitching\n",
     "from PyPetaKit5D import XR_matlab_stitching_wrapper\n",
     "\n",
     "# The data is 2d and the coordinates are in the stage coordinates without any conversion\n",
@@ -218,10 +265,19 @@
    "execution_count": null
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Generate an image list for 2P images from tile positions"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6707c3eba8286565"
+  },
+  {
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "# Example for generating an image list for 2P images from tile positions\n",
     "from PyPetaKit5D import XR_generate_image_list_wrapper\n",
     "\n",
     "# result file:\n",
@@ -276,10 +332,19 @@
    "execution_count": null
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Run stitching for the 2P image"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "7c7c5dcea4d9caac"
+  },
+  {
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "# Example for stitching of 2P image\n",
     "from PyPetaKit5D import XR_matlab_stitching_wrapper\n",
     "from datetime import datetime\n",
     "\n",
@@ -411,10 +476,19 @@
    "execution_count": null
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Test the parameters for OMW backward projector for the Widefield image"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "df723c59546e1a4a"
+  },
+  {
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "# Example for testing the parameters for OMW backward projector for the widefield image\n",
     "from PyPetaKit5D import XR_visualize_OTF_mask_segmentation\n",
     "\n",
     "# Set your data path to our demo dataset\n",
@@ -436,10 +510,19 @@
    "execution_count": null
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Run an OMW deconvolution for the Widefield image"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "5dda6cdd6f724d31"
+  },
+  {
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "# Example for running an OMW deconvolution  for the widefield image\n",
     "from PyPetaKit5D import XR_decon_data_wrapper\n",
     "\n",
     "# Set your data path to our demo dataset\n",
@@ -539,10 +622,19 @@
    "execution_count": null
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Test the parameters for OMW backward projector for the Confocal image"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "477a119bd5897833"
+  },
+  {
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "# Example for running an OMW deconvolution for the Confocal image\n",
     "from PyPetaKit5D import XR_visualize_OTF_mask_segmentation\n",
     "\n",
     "# Set your data path to our demo dataset\n",
@@ -563,10 +655,19 @@
    "execution_count": null
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Run an OMW deconvolution for the Confocal image"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a79272ceb2364f99"
+  },
+  {
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "# Example for running an OMW deconvolution  for the Confocal image\n",
     "from PyPetaKit5D import XR_decon_data_wrapper\n",
     "\n",
     "# Set your data path to our demo dataset\n",
