Changed the psf detection demo to display the graphs in the notebook

--- a/notebooks/examples.ipynb
+++ b/notebooks/examples.ipynb
@@ -813,6 +813,8 @@
    "source": [
     "# Note: This demo will not end until you close the final graph\n",
     "from PyPetaKit5D import XR_psf_analysis_wrapper\n",
+    "import os\n",
+    "from IPython.display import Image, display\n",
     "\n",
     "# Set your data path to our demo dataset\n",
     "dataPath = '~/Downloads/PetaKit5D_demo_cell_image_dataset/'\n",
@@ -845,7 +847,7 @@
     "# number of cpu cores\n",
     "cpusPerTask = 24\n",
     "# if true, use Matlab runtime (for the situation without matlab license)\n",
-    "mccMode = False\n",
+    "mccMode = True\n",
     "# config file for the master jobs that runs on CPU node\n",
     "configFile = ''\n",
     "\n",
@@ -853,7 +855,12 @@
     "    skewAngle=skewAngle, channelPatterns=channelPatterns, channels=channels,\n",
     "    deskew=deskew, objectiveScan=objectiveScan, sourceStr=sourceStr,\n",
     "    RWFn=RWFn, parseCluster=parseCluster, masterCompute=masterCompute,\n",
-    "    cpusPerTask=cpusPerTask, mccMode=mccMode, configFile=configFile);"
+    "    cpusPerTask=cpusPerTask, mccMode=mccMode, configFile=configFile, visible=False);\n",
+    "\n",
+    "# Display the graphs\n",
+    "im1 = Image(filename = f\"{os.path.expanduser(dataPaths[0])}/DS/PSFAnalysis/comp_488_2_c.png\")\n",
+    "im2 = Image(filename = f\"{os.path.expanduser(dataPaths[0])}/DS/PSFAnalysis/wT_488_2_c.png\")\n",
+    "display(im1,im2)"
    ]
   },
   {
