--- a/notebooks/examplesNonLightSheetModalities.ipynb
+++ b/notebooks/examplesNonLightSheetModalities.ipynb
@@ -347,6 +347,7 @@
    "source": [
     "from PyPetaKit5D import XR_matlab_stitching_wrapper\n",
     "from datetime import datetime\n",
+    "import os\n",
     "\n",
     "# result folder:\n",
     "# {destPath}/PetaKit5D_2P_Confocal_Phase_Widefield_demo_datasets/2P/matlab_stitch/\n",
