Added more output to the notebooks

--- a/notebooks/examples.ipynb
+++ b/notebooks/examples.ipynb
@@ -813,8 +813,6 @@
    "source": [
     "# Note: This demo will not end until you close the final graph\n",
     "from PyPetaKit5D import XR_psf_analysis_wrapper\n",
-    "import os\n",
-    "from IPython.display import Image, display\n",
     "\n",
     "# Set your data path to our demo dataset\n",
     "dataPath = '~/Downloads/PetaKit5D_demo_cell_image_dataset/'\n",
@@ -855,13 +853,35 @@
     "    skewAngle=skewAngle, channelPatterns=channelPatterns, channels=channels,\n",
     "    deskew=deskew, objectiveScan=objectiveScan, sourceStr=sourceStr,\n",
     "    RWFn=RWFn, parseCluster=parseCluster, masterCompute=masterCompute,\n",
-    "    cpusPerTask=cpusPerTask, mccMode=mccMode, configFile=configFile, visible=False);\n",
+    "    cpusPerTask=cpusPerTask, mccMode=mccMode, configFile=configFile, visible=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Display the graphs from PSF Analysis"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "ecd61b2039b94730"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from IPython.display import Image, display\n",
     "\n",
-    "# Display the graphs\n",
     "im1 = Image(filename = f\"{os.path.expanduser(dataPaths[0])}/DS/PSFAnalysis/comp_488_2_c.png\")\n",
     "im2 = Image(filename = f\"{os.path.expanduser(dataPaths[0])}/DS/PSFAnalysis/wT_488_2_c.png\")\n",
     "display(im1,im2)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "1659ea5f7abdff22",
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
