--- a/notebooks/examplesNonLightSheetModalities.ipynb
+++ b/notebooks/examplesNonLightSheetModalities.ipynb
@@ -153,6 +153,38 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## Display the Generated Image List for the Phase Images"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "709adead585ebbec"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import csv\n",
+    "\n",
+    "# Open the CSV file\n",
+    "with open(f\"{os.path.expanduser(currDataPath[0])}/ImageList_from_tile_positions.csv\", mode='r') as file:\n",
+    "    # Create a CSV reader\n",
+    "    csv_reader = csv.reader(file)\n",
+    "\n",
+    "    # Iterate over each row in the CSV and print it\n",
+    "    for row in csv_reader:\n",
+    "        print(row)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "4713e7e59701453f",
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## Run stitching for the Phase data"
    ],
    "metadata": {
@@ -329,6 +361,38 @@
     "collapsed": false
    },
    "id": "cf71c9e774389e75",
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Display the Generated Image List for the 2P Images"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "31bbfbe70546ed5d"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import csv\n",
+    "\n",
+    "# Open the CSV file\n",
+    "with open(f\"{os.path.expanduser(currDataPath[0])}/ImageList_from_tile_positions.csv\", mode='r') as file:\n",
+    "    # Create a CSV reader\n",
+    "    csv_reader = csv.reader(file)\n",
+    "\n",
+    "    # Iterate over each row in the CSV and print it\n",
+    "    for row in csv_reader:\n",
+    "        print(row)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "91d95e67ab4a6e84",
    "execution_count": null
   },
   {
