--- a/notebooks/examples.ipynb
+++ b/notebooks/examples.ipynb
@@ -2,47 +2,59 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "4390024e9177d53",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "source": [
     "# PyPetaKit5D Examples"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "4390024e9177d53"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "eb15422a79f39f5",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "source": [
     "## Install PyPetaKit5D in your env"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "eb15422a79f39f5"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "6ff5259b-82b5-43cb-bba2-54dedeca9a59",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "# The installation may take a long time\n",
     "# You can skip this step if you've already installed it in the env you are using for this notebook\n",
     "%pip install --no-binary :all: --no-cache-dir PyPetaKit5D"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "6ff5259b-82b5-43cb-bba2-54dedeca9a59",
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "d4a79dec66d112a2",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "source": [
     "## Download the Cell Image Dataset"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "d4a79dec66d112a2"
+   ]
   },
   {
    "cell_type": "code",
@@ -87,13 +99,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3cc2b362d2454291",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "source": [
     "## Run a DSR on our demo dataset"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "3cc2b362d2454291"
+   ]
   },
   {
    "cell_type": "code",
@@ -176,13 +191,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f99e1e72783eff50",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "source": [
     "## Run a deconvolution on our demo dataset"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "f99e1e72783eff50"
+   ]
   },
   {
    "cell_type": "code",
@@ -225,7 +243,7 @@
     "# typically 0.002 - 0.01 for SNR ~20; 0.02 - 0.1 or higher for SNR ~7\n",
     "wienerAlpha = 0.005\n",
     "# OTF thresholding parameter\n",
-    "OTFCumThresh = 0.9\n",
+    "OTFCumThresh = 0.88\n",
     "# true if the PSF is in skew space\n",
     "skewed = True\n",
     "# deconvolution result path string (within dataPath)\n",
@@ -279,13 +297,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d82691d7fbeaa815",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "source": [
     "## Run a skewed space stitch on our demo dataset"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "d82691d7fbeaa815"
+   ]
   },
   {
    "cell_type": "code",
@@ -417,20 +438,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9415210c6e489430",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "source": [
     "## Run a resample on our demo dataset"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "9415210c6e489430"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "6a6275b73bf0f62d",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -453,7 +480,7 @@
     "# true if input is in zarr format\n",
     "zarrFile = False\n",
     "# true for large files that the processing cannot fit into memory\n",
-    "largeZarr = False\n",
+    "largeFile = False\n",
     "# save output as zarr if true\n",
     "saveZarr = False\n",
     "# block size to define the zarr chunk size, only needed for zarr file\n",
@@ -476,7 +503,7 @@
     "\n",
     "XR_resample_dataset(dataPaths, resampleFactor, resultDirName=resultDirName,\n",
     "    channelPatterns=channelPatterns, interpMethod=interpMethod, save16bit=save16bit,\n",
-    "    zarrFile=zarrFile, largeZarr=largeZarr, saveZarr=saveZarr, blockSize=blockSize,\n",
+    "    zarrFile=zarrFile, largeFile=largeFile, saveZarr=saveZarr, blockSize=blockSize,\n",
     "    batchSize=batchSize, borderSize=borderSize, parseCluster=parseCluster,\n",
     "    masterCompute=masterCompute, cpusPerTask=cpusPerTask, mccMode=mccMode,\n",
     "    configFile=configFile);"
@@ -484,13 +511,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9ee6d8dcb968bd5b",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "source": [
     "# Run a crop on our demo dataset"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "9ee6d8dcb968bd5b"
+   ]
   },
   {
    "cell_type": "code",
@@ -511,20 +541,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "19550559b55f45da",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "source": [
     "## Create MIPs of our demo dataset"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "19550559b55f45da"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "1da23017de640863",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -542,7 +578,7 @@
     "# true if input is in zarr format\n",
     "zarrFile = False\n",
     "# true for large files that the processing cannot fit into memory\n",
-    "largeZarr = False\n",
+    "largeFile = False\n",
     "# batch size for a task, only needed for zarr file\n",
     "batchSize = [1024, 1024, 1024]\n",
     "# save as 16 bit if true\n",
@@ -560,27 +596,33 @@
     "configFile = ''\n",
     "\n",
     "XR_MIP_wrapper(dataPaths, resultDirName=resultDirName, axis=axis, channelPatterns=channelPatterns,\n",
-    "    zarrFile=zarrFile, largeZarr=largeZarr, batchSize=batchSize, save16bit=save16bit,\n",
+    "    zarrFile=zarrFile, largeFile=largeFile, batchSize=batchSize, save16bit=save16bit,\n",
     "    parseCluster=parseCluster, masterCompute=masterCompute, cpusPerTask=cpusPerTask,\n",
     "    mccMode=mccMode, configFile=configFile);"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "2b5a057c58da6b03",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "source": [
     "## Run an FFT Analysis on our demo dataset"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "2b5a057c58da6b03"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "1ae9109d3664d604",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -625,7 +667,7 @@
     "# typically 0.002 - 0.01 for SNR ~20; 0.02 - 0.1 or higher for SNR ~7\n",
     "wienerAlpha = 0.005\n",
     "# OTF thresholding parameter\n",
-    "OTFCumThresh = 0.9\n",
+    "OTFCumThresh = 0.88\n",
     "# true if the PSF is in skew space\n",
     "skewed = True\n",
     "# deconvolution result path string (within dataPath)\n",
@@ -794,20 +836,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "91cef5776eff29d2",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "source": [
     "# Run a PSF Analysis on our demo dataset"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "91cef5776eff29d2"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "942c93c24e398201",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -858,16 +906,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ecd61b2039b94730",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "source": [
     "## Display the graphs from PSF Analysis"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "ecd61b2039b94730"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "1659ea5f7abdff22",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -876,29 +935,30 @@
     "im1 = Image(filename = f\"{os.path.expanduser(dataPaths[0])}/DS/PSFAnalysis/comp_488_2_c.png\")\n",
     "im2 = Image(filename = f\"{os.path.expanduser(dataPaths[0])}/DS/PSFAnalysis/wT_488_2_c.png\")\n",
     "display(im1,im2)"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "1659ea5f7abdff22",
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "78316071bda52f3d",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "source": [
     "## Run an FSC Analysis on our demo dataset"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "78316071bda52f3d"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "22393ecec9d21aaa",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -945,7 +1005,7 @@
     "# the debug mode\n",
     "wienerAlpha = 0.05\n",
     "# OTF thresholding parameter\n",
-    "OTFCumThresh = 0.9\n",
+    "OTFCumThresh = 0.88\n",
     "# true if the PSF is in skew space\n",
     "skewed = True\n",
     "# deconvolution result path string (within dataPath)\n",
@@ -1060,20 +1120,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9dd79536bebe80b6",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "source": [
     "## Convert tiff files to zarr files and zarr files to tiff files using our demo dataset"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "9dd79536bebe80b6"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "d2dfeb2fc622ed54",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -1140,20 +1206,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "aad3ba57325c9227",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "source": [
     "## Create an imaris file from our demo dataset"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "aad3ba57325c9227"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "16409b8a4afb0d79",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -1207,7 +1279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
