--- a/notebooks/examples.ipynb
+++ b/notebooks/examples.ipynb
@@ -354,18 +354,15 @@
     "# cross correlation registration, if false, directly stitch by the coordinates.\n",
     "xcorrShift = True\n",
     "\n",
-    "# if true, only stitch first time point\n",
-    "onlyFirstTP = False\n",
-    "\n",
-    "# stitch pipeline, no need to change, zarr pipeline is the mostly used one.\n",
-    "stitchPipeline = 'zarr'\n",
-    "\n",
     "# xcorr registration on the primary channel, and other channels uses the\n",
     "# registration informaion from the primary channel\n",
     "PrimaryCh = 'CamB_ch0'\n",
     "\n",
     "# channels to stitch\n",
     "ChannelPatterns = ['CamA_ch0', 'CamB_ch0']\n",
+    "\n",
+    "# true if input is in zarr format\n",
+    "zarrFile = False\n",
     "\n",
     "# if true, save result as 16bit, if false, save as single\n",
     "Save16bit = True\n",
@@ -427,7 +424,7 @@
     "XR_matlab_stitching_wrapper(dataPaths, ImageListFullpath,\n",
     "    DS=DS, DSR=DSR, skewAngle=SkewAngle, reverse=Reverse, axisOrder=axisOrder,\n",
     "    xcorrShift=xcorrShift, channelPatterns=ChannelPatterns, primaryCh=PrimaryCh,\n",
-    "    blockSize=blockSize, tileOffset=TileOffset, resampleType=resampleType,\n",
+    "    zarrFile=zarrFile, blockSize=blockSize, tileOffset=TileOffset, resampleType=resampleType,\n",
     "    resampleFactor=resample, xyPixelSize=xyPixelSize, dz=dz, \n",
     "    blendMethod=BlendMethod, resultDirName=stitchResultDir, xyMaxOffset=xyMaxOffset,\n",
     "    zMaxOffset=zMaxOffset, xcorrDownsample=xcorrDownsample, inputBbox=InputBbox,\n",
@@ -1279,7 +1276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
